--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,9 @@
   <title>Burgers</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/images/burger-svgrepo-com.svg">
 </head>
 <body>
-  <div class="page">
-    <app-root></app-root>
-  </div>
+  <app-root></app-root>
 </body>
 </html>
